# omni

./: .env.example  .gitignore  Cargo.toml  Microsoft_365_Connector_Setup_Guide.docx  README.md  generate_setup_guide.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build-ai.yml  build-connector-manager.yml  build-connector.yml  build-indexer.yml  build-migrator.yml  build-sandbox.yml  build-searcher.yml  build-service.yml  build-web.yml  ci.yml  package-deployment.yml
benchmarks/src/search_client/: mod.rs
connectors/atlassian/src/: api.rs  confluence.rs  main.rs  models.rs  sync.rs
connectors/atlassian/tests/: sync_integration_test.rs
connectors/clickup/: Dockerfile  main.py  pyproject.toml
connectors/clickup/clickup_connector/: __init__.py  client.py  config.py  connector.py  mappers.py  models.py
connectors/clickup/tests/: conftest.py  test_auth_failure.py  test_cancellation.py  test_full_sync.py  test_health_manifest.py  test_incremental_sync.py  test_permissions.py
connectors/filesystem/: Cargo.toml
connectors/filesystem/src/: content_extractor.rs  lib.rs  main.rs  models.rs  scanner.rs  watcher.rs
connectors/filesystem/tests/: integration_tests.rs
connectors/fireflies/src/: api.rs  main.rs
connectors/github/: Dockerfile  main.py  pyproject.toml
connectors/github/github_connector/: client.py  connector.py  mappers.py  models.py
connectors/github/tests/: conftest.py  test_permissions.py
connectors/google/: Cargo.toml
connectors/google/src/: api.rs  auth.rs  drive.rs  gmail.rs  main.rs  models.rs  sync.rs
connectors/google/tests/: integration_tests.rs
connectors/google/tests/common/: mod.rs
connectors/imap/: Cargo.toml
connectors/imap/src/: api.rs  attachment.rs  main.rs  models.rs
connectors/linear/: Dockerfile  package-lock.json  package.json
connectors/paperless/: Dockerfile  README.md  main.py  pyproject.toml
connectors/paperless/paperless_connector/: __init__.py  client.py  config.py  connector.py  mappers.py  models.py
connectors/paperless/tests/: __init__.py  test_client.py  test_connector.py  test_mappers.py
connectors/slack/: Cargo.toml
connectors/slack/src/: api.rs  client.rs  content.rs  main.rs  models.rs  sync.rs
connectors/slack/tests/: mock_slack.rs  sync_integration_test.rs
connectors/slack/tests/common/: mod.rs
connectors/telegram/: Dockerfile  README.md  main.py  pyproject.toml
connectors/telegram/scripts/: auth.py
connectors/telegram/telegram_connector/: __init__.py  client.py  config.py  connector.py  mappers.py  telethon_client.py
docker/: docker-compose.benchmark.yml  docker-compose.dev.yml  docker-compose.local-inference.yml  docker-compose.yml
docs/: AGENT-PLATFORM-PLAN.md
omni-mcp-server/: package.json
omni-mcp-server/src/: index.ts
scripts/ops/: cleanup-orphan-blobs.sh
sdk/python/: pyproject.toml
sdk/python/examples/: rss_connector.py
sdk/python/omni_connector/: __init__.py  client.py  connector.py  mcp_adapter.py  models.py  server.py  storage.py
sdk/python/tests/: test_mcp_adapter.py  test_mcp_server.py  test_models.py  test_server.py
sdk/typescript/: package-lock.json  package.json
services/ai/: config.py  main.py  prompts.py  pyproject.toml  state.py
services/ai/agents/: __init__.py  cron_utils.py  executor.py  models.py  repository.py  scheduler.py
services/ai/db/: __init__.py  documents.py  listener.py  messages.py  model_providers.py  models.py  usage.py  users.py
services/ai/embeddings/: openai.py
services/ai/processing/: __init__.py
services/ai/providers/: __init__.py  anthropic.py  azure_foundry.py  bedrock.py  gemini.py  openai.py  openai_compatible.py  vertex_ai.py  vllm.py
services/ai/routers/: __init__.py  agents.py  chat.py  prompts.py  usage.py
services/ai/services/: citations.py  compaction.py  providers.py  stream.py  usage.py
services/ai/tests/: conftest.py  helpers.py
services/ai/tests/integration/: test_background_agents.py  test_batch_processor.py  test_chat_attribute_search.py  test_connector_handler.py  test_document_handler.py  test_document_permissions.py  test_documents_repository.py  test_dynamic_sources.py  test_prompts_endpoint.py
services/ai/tests/unit/: test_chat.py  test_compaction.py  test_permissions.py  test_usage.py
services/ai/tools/: __init__.py  connector_handler.py  document_handler.py  email_handler.py  people_handler.py  registry.py  sandbox_handler.py  search_handler.py  searcher_client.py  skill_handler.py
services/docling/: Dockerfile  README.md  app.py  requirements.txt
services/migrations/: 059_add_message_branching.sql  061_fix_source_type_constraints.sql  063_add_vertex_ai_provider_type.sql  064_add_linear_source_type.sql  064_add_okta_oauth_provider.sql  065_create_agents_tables.sql  066_create_email_providers_table.sql  067_create_people_table.sql  069_add_clickup_source_type.sql  071_add_secondary_model_flag.sql  072_add_ms_teams_source_type.sql  073_add_entra_oauth_provider.sql  075_add_paperless_ngx_source_type.sql  075_create_api_keys_table.sql  076_add_allowed_sources_to_api_keys.sql  077_add_scope_to_api_keys.sql  077_multilingual_search_index.sql  079_fix_bm25_segment_proliferation.sql  080_create_model_usage_table.sql  081_rename_vllm_to_openai_compatible.sql
services/searcher/: Cargo.toml
services/searcher/src/: handlers.rs  lib.rs  models.rs  operator_registry.rs  people_cache.rs  query_parser.rs  search.rs  search_repository.rs  suggested_questions.rs
services/searcher/tests/: integration_tests.rs
services/searcher/tests/common/: mod.rs
shared/: Cargo.toml
shared/src/: config.rs  content_extractor.rs  content_storage.rs  lib.rs  models.rs  sdk_client.rs  test_utils.rs
shared/src/clients/: ai.rs  docling.rs  mod.rs
shared/src/db/repositories/: content_blob.rs  document.rs  mod.rs  person.rs  source.rs
shared/src/storage/: gc.rs  postgres.rs  s3.rs
web/: .env.test  Dockerfile  Dockerfile.dev  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: app.d.ts  hooks.server.ts
(+199 files in other folders)
