[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { workspace = true, features = ["serde"] }
time = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
async-trait = "0.1"
thiserror = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
futures-util = "0.3"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
base64 = "0.22"
chrono = { workspace = true }
governor = "0.6"
nonzero_ext = "0.3"
rand = "0.8"
ring = "0.17"
sha2 = "0.10"
urlencoding = "2.1"
url = { workspace = true }
aws-config = { version = "1.8.11", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.108.0"
bytes = "1.5"

# Content extraction
docx-rs = "0.4"
calamine = "0.34"
zip = "8.4"
quick-xml = "0.39"
pdf_oxide = "0.3"
html2text = "0.16"

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = "1.1"
dashmap = { workspace = true }