[package]
name = "omni-filesystem-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omni-filesystem-connector"
path = "src/main.rs"

[lib]
name = "omni_filesystem_connector"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
shared = { path = "../../shared" }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
nonzero_ext = { workspace = true }
notify = "6.0"
walkdir = "2.3"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3"
docx-rs = "0.4"