[project]
name = "telegram-connector"
version = "1.1.0"
description = "Telegram connector for Omni (Bot API + Telethon MTProto)"
requires-python = ">=3.11"
dependencies = [
    "omni-connector",
    "httpx>=0.27.0",
    "telethon>=1.37.0",
    "cryptg>=0.4",
]

[tool.uv.sources]
omni-connector = { path = "../../sdk/python" }

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_connector"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
