[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-connector"
version = "0.1.0"
description = "Python SDK for building Omni connectors"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Omni Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
testing = [
    "testcontainers>=4.0.0",
    "asyncpg>=0.29.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "docker>=7.0.0",
    "python-ulid>=3.0.0",
]
examples = [
    "feedparser>=6.0.0",
]
mcp = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/getomnico/omni"
Documentation = "https://github.com/getomnico/omni/tree/main/sdk/python"
Repository = "https://github.com/getomnico/omni"

[tool.hatch.build.targets.wheel]
packages = ["omni_connector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
