[package]
name = "omni-searcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "omni_searcher"
path = "src/lib.rs"

[[bin]]
name = "omni-searcher"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
sqlx = { workspace = true, features = ["migrate"] }
pgvector = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
axum = { version = "0.7", features = ["tokio"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
chrono = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
bytes = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
url = "2.5"
regex = "1"
time = { workspace = true, features = ["formatting", "parsing", "macros"] }
async-trait = { workspace = true }
shared = { path = "../../shared" }
dashmap = { workspace = true }
fst = "0.4"

[dev-dependencies]
urlencoding = "2.1"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
axum-test = { workspace = true }